--- a/public/index.html
+++ b/public/index.html
@@ -9,35 +9,36 @@
     <link rel="stylesheet"
         href="https://at.alicdn.com/t/c/font_3959585_690nokava2d.css?spm=a313x.7781069.1998910419.52&file=font_3959585_690nokava2d.css">
     <style>
-        html,body {
+        html,
+        body {
             margin: 0;
             padding: 0;
         }
+
         .search-container {
             background-color: #3b3e49;
+            overflow: hidden;
         }
 
         .search-input-box {
             display: flex;
             flex-direction: row;
             align-items: center;
-            padding: 0px 20px;
+            padding: 0px 30px;
             background-color: #1e222d;
-            position: fixed;
-            top: 0;
-            z-index: 999;
             width: 100%;
+            color: #a3a6af;
         }
 
         .search-input {
             width: 100%;
-            height: 55px;
+            height: 40px;
             background: none;
             outline: none;
             border: none;
-            color: white;
             font-size: 18px;
             padding: 0 10px;
+            color: #a3a6af;
         }
 
         .search-input-box i {
@@ -49,34 +50,61 @@
             color: aliceblue;
             list-style: none;
             padding: 0;
-            margin-top: 61px;
+            margin: 0;
+            height: 400px;
+            overflow: auto;
         }
 
         .search-list-box li {
             position: relative;
-            padding: 0px 20px;
+            padding: 0px 30px;
             margin-top: 1px;
             display: flex;
             flex-direction: row;
             align-items: center;
-            height: 50px;
+            height: 40px;
             background-color: #1e222d;
+        }
+
+        .search-list-box li:hover {
+            background-color: #2a2e39;
         }
 
         .search-list-box li .left {
             position: absolute;
-            left: 20px;
+            left: 30px;
         }
 
         .search-list-box li .right {
             position: absolute;
-            right: 20px;
+            right: 30px;
         }
 
         .search-list-box li i {
             font-size: 20px;
         }
 
+        .search-list-box li span {
+            padding: 5px;
+            color: #2962ff;
+        }
+
+        .search-list-box li span:hover {
+            background-color: #1e222d;
+        }
+
+        .search-list-box::-webkit-scrollbar {
+            width: 3px;
+        }
+
+        .search-list-box::-webkit-scrollbar-track {
+            background-color: black;
+        }
+
+        .search-list-box::-webkit-scrollbar-thumb {
+            background: #4e4e4e;
+            border-radius: 25px;
+        }
     </style>
 </head>
 
@@ -89,81 +117,81 @@
             </div>
             <ul class="search-list-box">
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
 
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
                 <li>
-                    <div class="left">知乎</div>
-                    <div class="right"><a><i class="iconfont icon-plus"></i></a></div>
+                    <div class="left">茅台/600018</div>
+                    <div class="right"><span><i class="iconfont icon-plus"></i></span></div>
                 </li>
             </ul>
         </div>
